--- a/index.html
+++ b/index.html
@@ -85,16 +85,6 @@
 const TRIALS_PER_BLOCK=2;
 const BLOCK_ORDER=["tempo","pitch"];
 const BLOCK_FILES={tempo:"tempo_trials.csv",pitch:"pitch_trials.csv"};
-const PRACTICE_TRIALS={
-  tempo:[
-    {video:"PT_FAST1.mp4", narrationText:"This music is fast. The elevator sped up the song!", correct:"wonky", responseRequired:false},
-    {video:"PT_SLOW2.mp4", narrationText:"Did the music change?", correct:"wonky", responseRequired:true}
-  ],
-  pitch:[
-    {video:"PT_HIGH2.mp4", narrationText:"This music sounds high-pitched. The elevator changed the pitch!", correct:"wonky", responseRequired:false},
-    {video:"PT_SLOW2.mp4", narrationText:"Did the music change?", correct:"wonky", responseRequired:true}
-  ]
-};
 
 let blocks={tempo:[],pitch:[]};
 let currentBlockIndex=0;
@@ -126,52 +116,68 @@ async function loadCSVData(blockType) {
   blocks[blockType] = parsed;
 }
 
-/* INTRODUCTIONS & INSTRUCTIONS */
+
 function showIntroScreen() {
   updateScreen(`
-  <div style="display:flex;align-items:center;justify-content:center;height:100%;padding:40px;">
-    <div style="flex:1;display:flex;justify-content:center;">
-      <img src="Melody.png" alt="Melody character" style="max-height:80vh;max-width:90%;border-radius:20px;" />
+    <div style="display:flex;align-items:center;justify-content:center;height:100%;padding:40px;box-sizing:border-box;">
+      <div style="flex:1;display:flex;justify-content:center;">
+        <img src="Melody.png" alt="Melody character" style="max-height:80vh;max-width:90%;border-radius:20px;" />
+      </div>
+      <div style="flex:1;padding:30px;">
+        <p style="font-size:1.5em;line-height:1.6;">
+          Hi there!<br>
+          My name is Melody, and I love music!<br>
+          Every day, I ride an elevator to get to music class.<br>
+          But today, something strange is happening...
+        </p>
+        <button id="continueIntro" class="btn-primary" style="margin-top:30px;font-size:1em;">Click to Play</button>
+        <audio id="introAudio" src="intro_narration.mp3"></audio>
+      </div>
     </div>
-    <div style="flex:1;padding:30px;">
-      <p style="font-size:1.5em;line-height:1.6;">
-        Hi there!<br>My name is Melody, and I love music!<br>
-        Every day, I ride an elevator to get to music class.<br>
-        But today, something strange is happening...
-      </p>
-      <button id="continueIntro" class="btn-primary" style="margin-top:30px;font-size:1em;">Click to Play</button>
-    </div>
-  </div>
-  <audio id="introAudio" src="intro_narration.mp3"></audio>
   `);
+
   const introAudio = document.getElementById("introAudio");
   const continueBtn = document.getElementById("continueIntro");
+
   continueBtn.addEventListener("click", async () => {
     continueBtn.disabled = true;
-    try { await introAudio.play(); } catch (err) { }
+    try {
+      await introAudio.play();
+    } catch (err) {
+      console.warn("Autoplay blocked or failed:", err);
+    }
     introAudio.onended = showIntroVideo;
   });
 }
+
 function showIntroVideo() {
   updateScreen(`
     <div style="display:flex;justify-content:center;align-items:center;height:100%;background:black;">
-      <video id="introVideo" width="100%" height="100%" playsinline style="max-width:100%;max-height:100%;" muted>
+      <video id="introVideo" width="100%" height="100%" playsinline muted style="max-width:100%;max-height:100%;">
         <source src="intro_video.mp4" type="video/mp4" />
       </video>
       <audio id="introNarration2" src="intro_narration2.mp3"></audio>
     </div>
-   `, "black");
+  `);
+
   const video = document.getElementById("introVideo");
   const narration = document.getElementById("introNarration2");
+
   const startPlayback = async () => {
-    try { await Promise.all([video.play(), narration.play()]); } catch (err) { }
+    try {
+      await Promise.all([video.play(), narration.play()]);
+    } catch (err) {
+      console.warn("Playback failed:", err);
+    }
     video.onended = () => setTimeout(showNarrationScreen, 2000);
   };
+
   window.addEventListener("click", startPlayback, { once: true });
 }
+
 function showNarrationScreen() {
   updateScreen(`
-    <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;">
+    <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
       <div style="flex:1;display:flex;justify-content:center;">
         <img src="Melody.png" alt="Melody character" style="max-height:80vh;max-width:90%;border-radius:20px;" />
       </div>
@@ -186,96 +192,194 @@ function showNarrationScreen() {
         <audio id="introNarration3" src="intro_narration3.mp3"></audio>
       </div>
     </div>
-    `);
+  `);
+
   const button = document.getElementById("playNarration");
   const audio = document.getElementById("introNarration3");
+
   button.addEventListener("click", async () => {
     button.disabled = true;
-    try { await audio.play(); } catch (err) { }
-    audio.onended = () => setTimeout(() => runPracticeTrials(BLOCK_ORDER[currentBlockIndex]), 1000);
+    try {
+      await audio.play();
+    } catch (err) {
+      console.warn("Audio play failed:", err);
+    }
+    audio.onended = () => setTimeout(showFastIntro, 1500);
   });
 }
 
-/* PRACTICE PHASE */
-function runPracticeTrials(blockType){
-  const tc=document.getElementById("trialControls");
-  let i=0;
-  function showNarrationScreenPractice(trial,nextStep){
-    tc.innerHTML=`<div style="padding:40px;font-size:1.4em;max-width:800px;margin:auto;">
-      <p>${trial.narrationText}</p>
-      <button id="continueButton" class="btn-primary" style="margin-top:20px;font-size:1em;">Continue</button>
-    </div>`;
-    document.getElementById("continueButton").addEventListener("click",()=>{
-      tc.innerHTML=""; nextStep();
+/* --------------------- TEMPO PRACTICE FLOW ------------------------ */
+
+function showFastIntro() {
+  updateScreen(`
+    <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
+      <p style="font-size:1.5em;line-height:1.8;max-width:800px;text-align:center;">
+        First, we’re going to learn about tempo.<br>
+        Tempo is how fast or slow the music goes.<br><br>
+        Ready?<br>
+        Listen to this song and pay attention to how the music changes to become faster when Melody rides the elevator to the second floor.
+      </p>
+      <audio id="fastNarration" src="PT_FAST1_NARRATION.mp3"></audio>
+    </div>
+  `);
+
+  const narration = document.getElementById("fastNarration");
+  narration.play().then(() => {
+    narration.onended = playFastVideo;
+  }).catch(err => {
+    console.warn("Autoplay issue:", err);
+    playFastVideo();
+  });
+}
+
+function playFastVideo() {
+  updateScreen(`
+    <video id="fastVideo" width="100%" height="100%" playsinline style="background:black;">
+      <source src="PT_FAST1.mp4" type="video/mp4" />
+    </video>
+  `);
+
+  const video = document.getElementById("fastVideo");
+  video.play().catch(e => console.warn("Video play failed:", e));
+  video.onended = showSlowIntro;
+}
+
+function showSlowIntro() {
+  updateScreen(`
+    <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
+      <p style="font-size:1.5em;line-height:1.8;max-width:800px;text-align:center;">
+        Whoa! That was a fast ride!<br><br>
+        Let’s try one more.<br>
+        Now Melody is going to go super sloooow. Listen carefully!
+      </p>
+      <audio id="slowNarration" src="PT_SLOW1_NARRATION.mp3"></audio>
+    </div>
+  `);
+
+  const narration = document.getElementById("slowNarration");
+  narration.play().then(() => {
+    narration.onended = playSlowVideo;
+  }).catch(err => {
+    console.warn("Autoplay issue:", err);
+    playSlowVideo();
+  });
+}
+
+function playSlowVideo() {
+  updateScreen(`
+    <video id="slowVideo" width="100%" height="100%" playsinline style="background:black;">
+      <source src="PT_SLOW1.mp4" type="video/mp4" />
+    </video>
+  `);
+
+  const video = document.getElementById("slowVideo");
+  video.play().catch(e => console.warn("Video play failed:", e));
+  video.onended = showTempoInstructions;
+}
+
+function showTempoInstructions() {
+  setTimeout(() => {
+    updateScreen(`
+      <div style="display:flex;justify-content:center;align-items:center;height:100%;background:white;padding:40px;box-sizing:border-box;">
+        <p style="font-size:1.5em;line-height:1.8;max-width:800px;text-align:center;">
+          Great! Now let's practice even more.<br><br>
+          Listen carefully and tell me if the music is <strong>faster</strong>, <strong>slower</strong>, or <strong>the same</strong>!
+        </p>
+        <audio id="tempoInstructions" src="PT_TEMPO_INSTRUCTIONS.mp3"></audio>
+      </div>
+    `);
+
+    const audio = document.getElementById("tempoInstructions");
+    audio.play().then(() => {
+      audio.onended = () => setTimeout(runTempoPractice, 1000);
+    }).catch(err => {
+      console.warn("Autoplay issue:", err);
+      runTempoPractice();
     });
-  }
-  function playNextPractice(){
-    if(i>=PRACTICE_TRIALS[blockType].length){
-      tc.innerHTML = "";
-      showPracticeComplete();
+  }, 1500);
+}
+
+function runTempoPractice() {
+  const practiceTrials = [
+    { video: "PT_FAST2.mp4", correct: "fast" },
+    { video: "PT_SLOW2.mp4", correct: "slow" }
+  ];
+  let i = 0;
+
+  function nextPractice() {
+    if (i >= practiceTrials.length) {
+      showRealTrialsIntro();
       return;
     }
-    const trial=PRACTICE_TRIALS[blockType][i++];
-    showNarrationScreenPractice(trial, ()=>{
-      updateScreen(`<video id="practiceVideo" playsinline preload="auto"></video>`);
-      const v=document.getElementById("practiceVideo");
-      v.src=trial.video;
-      v.play();
-      v.onerror=()=>{showPracticeChoice(trial.correct,playNextPractice);}
-      v.onended=()=>{
-        if(trial.responseRequired){
-          showPracticeChoice(trial.correct,playNextPractice);
-        }else{
-          tc.innerHTML=`<div style="font-size:1.3em;margin-top:20px;">That was the <strong>${trial.correct}</strong> elevator!<br><br>Let's try one yourself next.</div>`;
-          setTimeout(()=>{tc.innerHTML=""; playNextPractice();},4000);
-        }
-      };
-    });
+    const trial = practiceTrials[i++];
+    playTempoPracticeVideo(trial.video, trial.correct, nextPractice);
   }
-  playNextPractice();
-  function showPracticeComplete(){
-    setTimeout(()=>{
-      updateScreen(`
-        <div style="display:flex;flex-direction:column;align-items:center;justify-content:center;height:100%;background:#cce0dd;">
-          <h1 style="margin-top:30px;color:#4b2e83;">Awesome! Now you're ready for the real trials!</h1>
-          <button id="startRealTrials" class="btn-primary" style="margin-top:20px;font-size:1.2em;">Start</button>
-        </div>
-        `,"#cce0dd");
-      document.getElementById("startRealTrials").addEventListener("click",()=> startRealTrials());
-    }, 1200);
-  }
+
+  nextPractice();
 }
-function showPracticeChoice(correctAnswer, onComplete) {
-  document.getElementById("trialControls").innerHTML = `
-    <h2>Which elevator did Melody ride?</h2>
-    <div style="display: flex; justify-content: center; gap: 60px; margin-top: 20px;">
-      <div>
-        <img src="normal.jpg" class="elevator-option" id="normalElevatorPractice" alt="Normal Elevator" style="width:300px;">
-        <div style="text-align: center; margin-top: 10px;">Normal</div>
-      </div>
-      <div>
-        <img src="wonky.png" class="elevator-option" id="wonkyElevatorPractice" alt="Wonky Elevator" style="width:300px;">
-        <div style="text-align: center; margin-top: 10px;">Wonky</div>
-      </div>
+
+function playTempoPracticeVideo(videoFile, correctAnswer, callback) {
+  updateScreen(`
+    <div style="width:100%; height:100%; display:flex; align-items:center; justify-content:center; background:#cce0dd;">
+      <video id="practiceVideo" playsinline autoplay style="width:100%; height:100%; object-fit:contain; background:#cce0dd;">
+        <source src="${videoFile}" type="video/mp4">
+      </video>
     </div>
-    <div id="practiceFeedback" style="margin-top:30px;font-size:1.2em;"></div>
-  `;
-  document.getElementById("normalElevatorPractice").addEventListener("click",()=>{
-    showPracticeFeedback("normal"===correctAnswer,onComplete);
-  },{once:true});
-  document.getElementById("wonkyElevatorPractice").addEventListener("click",()=>{
-    showPracticeFeedback("wonky"===correctAnswer,onComplete);
-  },{once:true});
+  `);
+
+  const video = document.getElementById("practiceVideo");
+
+  video.onended = () => {
+    showTempoResponseScreen(correctAnswer, callback);
+  };
+
+  video.play().catch(err => {
+    console.warn("Autoplay issue or play failed:", err);
+    showTempoResponseScreen(correctAnswer, callback);
+  });
 }
-function showPracticeFeedback(isCorrect, onComplete) {
-  const fb=document.getElementById("practiceFeedback");
-  fb.innerHTML= isCorrect
-    ? "<span style='color:green;'>Correct!</span> Great job!"
-    : "<span style='color:red;'>Oops!</span> That was actually the <strong>"+(isCorrect?"normal":"wonky")+"</strong> elevator.";
-  setTimeout(()=>{
-    document.getElementById("trialControls").innerHTML="";
-    onComplete();
-  },2000);
+
+function showTempoResponseScreen(correctAnswer, callback) {
+  updateScreen(`
+    <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; background: #cce0dd; padding: 20px;">
+      <h1 style="color: #4b2e83; margin-top: 30px;">How did the music sound?</h1>
+      <div style="display: flex; gap: 40px; margin-top: 20px;">
+        <button class="tempo-btn" data-choice="fast" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Fast</button>
+        <button class="tempo-btn" data-choice="slow" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Slow</button>
+        <button class="tempo-btn" data-choice="same" style="padding: 14px 28px; font-size: 1.2em; border-radius: 10px;">Same</button>
+      </div>
+      <audio id="correctSound" src="correct_feedback.mp3"></audio>
+      <audio id="wrongSound" src="wrong_feedback.mp3"></audio>
+      <div id="feedback" style="margin-top: 20px; font-size: 1.2em; color: red;"></div>
+    </div>
+  `);
+
+  const buttons = document.querySelectorAll('.tempo-btn');
+  let answered = false;
+
+  buttons.forEach(btn => {
+    btn.addEventListener('click', () => {
+      if (answered) return;
+      answered = true;
+      const choice = btn.getAttribute('data-choice');
+      buttons.forEach(b => b.disabled = true);
+
+      if (choice === correctAnswer) {
+        document.getElementById("feedback").style.color = "green";
+        document.getElementById("feedback").innerText = "Correct!";
+        document.getElementById("correctSound").play().catch(() => {});
+        setTimeout(callback, 1500);
+      } else {
+        document.getElementById("feedback").style.color = "red";
+        document.getElementById("feedback").innerText = "Oops! Try again.";
+        document.getElementById("wrongSound").play().catch(() => {});
+        setTimeout(() => {
+          answered = false;
+          buttons.forEach(b => b.disabled = false);
+        }, 2000);
+      }
+    });
+  });
 }
 
 /* REAL TRIALS */
