--- a/index.html
+++ b/index.html
@@ -470,20 +470,25 @@ function hideAll() {
     }
   });
 }
-async function playTrial() {
+
+  async function playTrial() {
+  const block = BLOCK_ORDER[currentBlockIndex];
+
   if (!blocks[block] || !blocks[block][trialCounter - 1]) {
-  updateScreen(`<h2>Error: No trial data found for ${block} block.</h2>`);
-  return;
-}
+    updateScreen(`<h2>Error: No trial data found for ${block} block.</h2>`);
+    return;
+  }
+
   document.getElementById("trialControls").innerHTML = "";
   updateScreen("");
   hideAll();
-  const block = BLOCK_ORDER[currentBlockIndex];
-  const trial = blocks[block][trialCounter-1];
+
+  const trial = blocks[block][trialCounter - 1];
   if (!trial) {
-    updateScreen(<h2>Error: No trial data found. Please check your CSV and block setup.</h2>);
+    updateScreen(`<h2>Error: No trial data found. Please check your CSV and block setup.</h2>`);
     return;
   }
+
   const [filename, original, gap, test] = trial;
   const originalSec = parseFloat(original);
   const gapSec = parseFloat(gap);
@@ -492,14 +497,21 @@ async function playTrial() {
   const audio = document.getElementById("myAudio");
   audio.src = filename;
   currentAudioFile = filename;
+
   const [v1, vGap, v2] = visuals.filter(v => v.el.tagName === "VIDEO").map(v => v.el);
-  await Promise.all([v1.play().then(() => v1.pause()), vGap.play().then(() => vGap.pause()), v2.play().then(() => v2.pause())]);
+  await Promise.all([
+    v1.play().then(() => v1.pause()),
+    vGap.play().then(() => vGap.pause()),
+    v2.play().then(() => v2.pause())
+  ]);
+
   const video1Sec = v1.duration;
   const gapVideoSec = vGap.duration;
   const video2Sec = v2.duration;
   const preStillSec = Math.max(0, originalSec - video1Sec);
   const gapStillSec = Math.max(0, gapSec - gapVideoSec);
   const postStillSec = Math.max(0, testSec - video2Sec);
+
   let t = 0;
   visuals[0].start = t; visuals[0].end = t += preStillSec;
   visuals[1].start = t; visuals[1].end = t += video1Sec;
@@ -509,8 +521,10 @@ async function playTrial() {
   visuals[5].start = t; visuals[5].end = t += postStillSec;
 
   await new Promise((resolve) => { audio.oncanplaythrough = resolve; });
+
   trialStartTime = performance.now();
   let currentVisual = null;
+
   function updateVisuals() {
     const time = audio.currentTime;
     for (const v of visuals) {
@@ -531,9 +545,13 @@ async function playTrial() {
       showResponseOptions();
     }
   }
+
   await audio.play();
   updateVisuals();
 }
+
+
+  
 function showResponseOptions() {
   updateScreen(
     <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; padding: 20px;">
